# practica-2-grupo-uno-equipo-6

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  __main__.py  pyproject.toml  start.bat
src/admon_parqueadero/: __init__.py  __main__.py  errores.py  utils.py
src/admon_parqueadero/baseDatos/: baseDatos.py  baseDatosException.py  deserializador.py  generarDatos.py  serializador.py
src/admon_parqueadero/gestorAplicacion/parqueadero/: almacen.py  factura.py  parqueadero.py  plaza.py  producto.py  tipo_estado.py  tipo_producto.py
src/admon_parqueadero/gestorAplicacion/personas/: cliente.py  empleado.py  persona.py
src/admon_parqueadero/gestorAplicacion/vehiculos/: carro.py  coloresVehiculo.py  marcasCarro.py  marcasMoto.py  moto.py  tipo_vehiculo.py  vehiculo.py
src/admon_parqueadero/uiMain/: utils.py  ventana_inicio.py
src/admon_parqueadero/uiMain/componentes/: combobox_ajustable.py  field_frame.py  formulario_carro.py  formulario_cliente.py  formulario_vehiculo.py  label_ajustable.py
src/admon_parqueadero/uiMain/funcionalidades/: base.py  base_funcionalidad.py  comprar_carro.py  generar_datos.py  ingresar_vehiculo.py  manejo_parqueadero.py  registrar_cliente.py  registrar_vehiculo.py  taller.py  vender_carro.py
src/admon_parqueadero/uiMain/ventanas/: ventana_inicio.py  ventana_principal_usu.py
src/admon_parqueadero/uiMain/widgets/: label_ajustable.py
